深入理解 Java 虚拟机：内存溢出异常
    - 常用 JVM 参数
    - 常见异常及可能原因
    - String 与字符串常量